--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,9 @@ body {
 }
 
 .menu ul {
-  background-color: #7E8C61;
+  background-color: #262626;
   position: -webkit-sticky;
   font-style: italic;
-  padding: 20px;
   font-size: 0.9em;
   width: 100%;
   text-align: right;
@@ -27,21 +26,69 @@ body {
   padding-inline: 10px;
   margin-right: 20px;
   font-size: 0.8em;
+  color: #F2F2F2;
 }
 
+h1 {
+  text-align: left;
+  display: absolute;
+  font-family: fantasy;
+  font-size: 0.9em;
+  float: left;
+  color: #F2F2F2;
+  padding: 10px;
+}
 .banner {
   background-image: url(/images/IMG_2870.JPG);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   width: 100%;
-  height: 500px;
+  height: 400px;
   box-sizing: border-box;
   display: block;
 }
 
-h1 {
-  text-align: left;
-  background-color: #F2F2F2;
-  display: absolute;
+main {
+  padding: 10px;
+  margin: 20px;
 }
+
+h2 {
+  font-size: 1.2em;
+  color: #F2F2F2;
+}
+
+.road {
+  font-size: 0.6em;
+  background-color:#262626;
+  color: #F2F2F2;
+  padding: 20px;
+  margin: 20px;
+  border-radius: 2em;
+  box-shadow: 20px -15px #898C6D;
+  display: inline-block;
+  width: 50%;
+}
+
+.self.information div {
+  border-radius: 2em;
+  box-shadow: 20px -15px #898C6D;
+  background-color: #262626;
+  color: #F2F2F2;
+  float: right;
+  width: 35%;
+}
+
+.self {
+  height: 300px;
+  border-radius: 2em;
+  padding: 30px;
+}
+
+aside ul {
+  font-size: 0.6em;
+  padding: 20px;
+  margin: 20px;
+}
+
