--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ h1 {
   float: left;
   color: #F2F2F2;
   padding: 10px;
+  font-weight: bold;
 }
 .banner {
   background-image: url(/images/IMG_2870.JPG);
@@ -57,10 +58,14 @@ main {
 h2 {
   font-size: 1.2em;
   color: #F2F2F2;
+  font-weight: bold;
+}
+
+p {
+  font-size: 0.6em;
 }
 
 .road {
-  font-size: 0.6em;
   background-color:#262626;
   color: #F2F2F2;
   padding: 20px;
@@ -78,12 +83,14 @@ h2 {
   color: #F2F2F2;
   float: right;
   width: 35%;
+  margin-top: 50px;
 }
 
 .self {
   height: 300px;
   border-radius: 2em;
   padding: 30px;
+  display: inline;
 }
 
 aside ul {
@@ -92,3 +99,10 @@ aside ul {
   margin: 20px;
 }
 
+section {
+  box-shadow: inset 0 0 1em #898C6D, 0 0 1em #262626;
+  background-color: #262626;
+  padding: 20px;
+  margin: 30px;
+  border-radius: 2em;
+}
