--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body h1 {
   padding: 40px;
   font-weight: bold;
   text-align: left;
-  font-family: Robot, sans-serif;
+  font-family: fantasy, sans-serif;
   float: left;
   color: #F2F2F2;
 }
