--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body h1 {
 }
 
 .banner {
-  background-image: url(/images/IMG_2870.JPG);
+  background-image: url(/images/IMG_2870.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
